[package]
name = "post_sound_rs"
version = "1.0.8"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.17", features = ["derive"] }
cpal = "0.15.3"
futures-util = "0.3"
soketto = "0.8.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
url = "2.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
